# luit-snapshots

./: COPYING  COPYING.asc  Makefile.in  aclocal.m4  builtin.c  charset.c  charset.h  config.hin  config_h.in  configure  configure.in  fontenc.c  iso2022.c  iso2022.h  luit.c  luit.h  luit.log.html  luit.man  luit.spec  luitconv.c  luitconv.h  minstall.sh  mkdirs.sh  other.c  other.h  parser.c  parser.h  plink.sh  sys.c  sys.h  trace.c  trace.h  version.h
encodings/: annotate-enc  make-tables
package/: luit.spec
package/debian/: changelog  copyright
package/detest/: changelog  control  copyright  rules
