dnl $XTermId: configure.in,v 1.8 2008/08/21 23:32:24 tom Exp $

AC_PREREQ(2.52.20030208)
AC_INIT(luit.c)
AC_CONFIG_HEADER(config.h:config_h.in)
CF_CHECK_CACHE

AC_ARG_PROGRAM

AC_PROG_CC
AC_PROG_CPP
AC_PROG_AWK
AC_PROG_INSTALL
AC_CHECK_PROGS(LINT, lint alint splint lclint, [])

CF_ANSI_CC_REQD
AC_CONST
CF_PROG_EXT

CF_XOPEN_SOURCE
CF_SIGWINCH
CF_SVR4
CF_SYSV
CF_SIZE_T
AC_TYPE_UID_T

CF_DISABLE_ECHO

if test -n "$GCC" ; then
AC_MSG_CHECKING(if you want to turn on gcc warnings)
CF_ARG_ENABLE(warnings,
	[  --enable-warnings       test: turn on GCC compiler warnings],
	[with_warnings=yes],
	[with_warnings=no])
AC_MSG_RESULT($with_warnings)
if test "$with_warnings" = yes
then
	CF_GCC_ATTRIBUTES
	CF_GCC_WARNINGS(Wwrite-strings Wconversion)
fi
fi

CF_X_FONTENC
CF_WITH_ZLIB

CF_WITH_LOCALE_ALIAS

AC_OUTPUT(Makefile,,,cat)
